# xarge_rtl_rules

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  THIRD_PARTY.md
.github/workflows/: bug_tests.yml
cocotb/: BUILD.bazel  README.md  STANDALONE_USAGE.md  cocotb_pipeline.bzl  cocotb_runner.py  cocotb_tools.bzl  defs.bzl
cocotb/examples/: BUILD.bazel  test_rv_skid_buffer.py
cocotb/private/: BUILD.bazel  legacy.bzl  legacy.bzl.backup  pipeline.bzl
cocotb/settings/: BUILD.bazel
cocotb/tools/: BUILD.bazel  cocotb_driver.py  cocotb_runtime.py  cocotb_runtime_test.py  cocotb_wrapper.py
corsair/: BUILD.bazel  README.md  defs.bzl
corsair/runner/: BUILD.bazel  workflow_runner.py
formal/: BUILD.bazel  defs.bzl  run_sby.py  run_sby_test.py
lint/: defs.bzl
lint/runner/: BUILD.bazel  run_lint.py  run_lint_test.py
packaging/: BUILD.bazel  defs.bzl
packaging/tools/: BUILD.bazel  bundle.py  bundle_test.py
pnr/: BUILD.bazel  defs.bzl
rtl/: defs.bzl  providers.bzl
synthesis/: BUILD.bazel  defs.bzl
tests/: BUILD.bazel  bug_tests.bzl  cocotb_integration_artifacts_test.sh  cocotb_pipeline_test.bzl  corsair_generate_test.bzl  formal_test.bzl
tests/testdata/: cocotb_dummy_dut.sv  cocotb_dummy_leaf.sv  cocotb_dummy_lib_top.sv  cocotb_dummy_test.py  cocotb_integration_dut.sv  formal_dummy_properties.sv  uart_regs.csrconfig  uart_regs.yaml
tests/testdata/include_leaf/: cocotb_dummy_leaf.svh
tests/testdata/include_top/: cocotb_dummy_top.svh
uvm/: BUILD.bazel  defs.bzl
