load(":cocotb_pipeline_test.bzl", "cocotb_rule_test_suite")
load(":corsair_generate_test.bzl", "corsair_rule_test_suite")

package(default_visibility = ["//visibility:private"])

cocotb_rule_test_suite(
    name = "cocotb_rule_tests",
)

corsair_rule_test_suite(
    name = "corsair_rule_tests",
)

test_suite(
    name = "all_rule_tests",
    tests = [
        ":cocotb_rule_tests",
        ":corsair_rule_tests",
        "//cocotb/tools:cocotb_runtime_test",
    ],
)
