# Copyright 2023 Antmicro
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@py_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(
    default_visibility = ["//visibility:public"],
)

py_binary(
    name = "cocotb_driver",
    srcs = ["cocotb_driver.py"],
    main = "cocotb_driver.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("cocotb"),
        requirement("cocotbext-axi"),
    ],
)

py_binary(
    name = "cocotb_wrapper",
    srcs = ["cocotb_wrapper.py"],
    main = "cocotb_wrapper.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("cocotb"),
        requirement("cocotbext-axi"),
    ],
)

filegroup(
    name = "all_tools",
    srcs = [
        ":cocotb_driver",
        ":cocotb_wrapper",
    ],
)